# assignment-cl

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
assignment_cl/: commits_processor.py  input_extractor.py  patch_loader.py  utils.py
assignment_cl/commit_url_wrappers/: __init__.py  base.py  wrappers.py
data/: commit_urls.txt
tests/integration/: test_cli.py
tests/unit/: test_commits_processor.py  test_input_extractor.py  test_patch_loader.py  test_utils.py
tests/unit/commit_url_wrappers/: test_wrappers.py
